{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 124,
  "lineage": "5a6a6a09-cb87-e9a3-9925-795997faf3af",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "servidor_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-07ff62358b87c7116",
            "arn": "arn:aws:ec2:us-east-1:151098958427:instance/i-027e14faf841cbd39",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-027e14faf841cbd39",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "parClaves",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-013e3c874a4ca70a7"
              }
            ],
            "primary_network_interface_id": "eni-013e3c874a4ca70a7",
            "private_dns": "ip-192-168-1-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.11",
            "public_ip": "18.212.54.41",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00eedc90e6d3c4bbc",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09df2ed899ba9fae9",
            "tags": {
              "Name": "Servidor Nginx"
            },
            "tags_all": {
              "Name": "Servidor Nginx"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0987ff4d0bda23742"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "151098958427",
            "id": "i-027e14faf841cbd39",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.parClaves",
            "aws_security_group.sg_allow_http",
            "aws_subnet.society",
            "aws_vpc.soul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_salida",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:151098958427:internet-gateway/igw-0374e3a75ba28f811",
            "id": "igw-0374e3a75ba28f811",
            "owner_id": "151098958427",
            "region": "us-east-1",
            "tags": {
              "Name": "igw_salida"
            },
            "tags_all": {
              "Name": "igw_salida"
            },
            "vpc_id": "vpc-044536b6db993c716"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.soul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:151098958427:route-table/rtb-0527ee8f2f712d25e",
            "id": "rtb-0527ee8f2f712d25e",
            "owner_id": "151098958427",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0374e3a75ba28f811",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-044536b6db993c716"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "151098958427",
            "id": "rtb-0527ee8f2f712d25e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw_salida",
            "aws_vpc.soul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "asigRT_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d49137b4800aa45",
            "region": "us-east-1",
            "route_table_id": "rtb-0527ee8f2f712d25e",
            "subnet_id": "subnet-09df2ed899ba9fae9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw_salida",
            "aws_route_table.RT_internet",
            "aws_subnet.society",
            "aws_vpc.soul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:151098958427:security-group/sg-0987ff4d0bda23742",
            "description": "Allow inbound http traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0987ff4d0bda23742",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "95.169.231.54/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Allow HTTP",
            "name_prefix": "",
            "owner_id": "151098958427",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http"
            },
            "tags_all": {
              "Name": "allow_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-044536b6db993c716"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "151098958427",
            "id": "sg-0987ff4d0bda23742",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.soul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "society",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:151098958427:subnet/subnet-09df2ed899ba9fae9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "192.168.1.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09df2ed899ba9fae9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "151098958427",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Society_PUBLIC"
            },
            "tags_all": {
              "Name": "Society_PUBLIC"
            },
            "vpc_id": "vpc-044536b6db993c716"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "151098958427",
            "id": "subnet-09df2ed899ba9fae9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.soul"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "soul",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:151098958427:vpc/vpc-044536b6db993c716",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.1.0/24",
            "default_network_acl_id": "acl-050a15a23f90409c4",
            "default_route_table_id": "rtb-0cf84ff794f23b4ec",
            "default_security_group_id": "sg-046d6d0be09586254",
            "dhcp_options_id": "dopt-08c86feddc429f7cb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-044536b6db993c716",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf84ff794f23b4ec",
            "owner_id": "151098958427",
            "region": "us-east-1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "151098958427",
            "id": "vpc-044536b6db993c716",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}